Fixing Dark mode in about, blog and job listing

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -2,6 +2,7 @@
   max-width: 100%;
   margin: 0 auto;
   padding: 0 16px;
+  background-color: var(--mainBackground);
 }
 
 .intro {
