--- a/assets/css/job-listing.css
+++ b/assets/css/job-listing.css
@@ -1,6 +1,7 @@
 main {
   max-width: 100%;
   height: 100%;
+  background-color: var(--mainBackground);
 }
 
 .hero-image {
@@ -16,7 +17,7 @@ main {
 }
 
 .job-posts {
-  color: #838383;
+  color: var(--mainBackground);
 }
 
 .job-posts h1 {
@@ -40,10 +41,11 @@ h1 {
 
 table {
   border-collapse: collapse;
-  color: #000;
+  color: var(--text);
   width: 100%;
   margin-top: 15px;
   margin-bottom: 25px;
+  background-color: var(--mainBackground);
 }
 
 th {
@@ -54,6 +56,7 @@ th {
 .job-posting-info {
   width: 100%;
   padding: 5px 20px;
+  /* background-color: var(--mainBackground); */
 }
 
 #mobile-table {
@@ -62,6 +65,9 @@ th {
 @media only screen and (max-width: 600px) {
   #mobile-table {
     display: block;
+    background-color: var(--mainBackground);
+    color: var(--text);
+    width: 100%;
   }
 
   #large-table-display {
@@ -71,6 +77,7 @@ th {
   .job-posts h1 {
     font-size: 1.2rem;
     margin-bottom: 15px;
+    background-color: var(--mainBackground);
   }
   .hero-image {
     background-image: url(../images/mobile-hire.jpg);
